--- a/index.html
+++ b/index.html
@@ -3,29 +3,94 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="styles/normalize.css">
+  <link rel="stylesheet" href="styles/style.css">
   <title>Научиться учиться</title>
 </head>
-<body>
-  <div class="page">
+<body class="page">
     <header class="header">
-
+      <div class="logo logo_place_header"></div>
+      <h1 class="header__title">Научиться учиться</h1>
+      <div class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни? <a href="#description" class="header__link link_visited">Узнать &rarr;</a></div>
+      <img class="header__main-illustration" alt="Опять два" src="images/header-image.png">
+      <div class="header__square-pic"></div>
     </header>
     <main class="content">
-      <section class="description">
+
+      <section class="description" id="description">
+        <div class="two-colums">
+        <h2 class="two-colums__brief">Главные проблемы в обучении</h2>
+        <div class="two-colums__main-text">
+        <div class="two-colums__main-text_paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.</div>
+        <div class="two-colums__main-text_paragraph"><span class="two-colums__main-text_paragraph_span-accent">Вывод:</span> учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?</div>
+        <div class="two-colums__main-text_paragraph">Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.</div>
+        </div>
+        </div>
       </section>
 
       <section class="digits">
+        <h2 class="section-title">Цифры и факты</h2>
+        <h3 class="section-subtitle">Про учёбу и мозг</h3>
+            <ul class="table">
+              <li class="table__cell"><h3 class="table__heading">86 миллиардов</h3><p class="table__text">Число нейронов в мозге человека</p></li>
+              <li class="table__cell"><h3 class="table__heading">2.1 миллиарда</h3><p class="table__text">Число нуждающихся в повышении квалификации</p><p class="table__text">Всемирный Банк, 2017</p></li>
+              <li class="table__cell"><h3 class="table__heading">1000 терабайт</h3><p class="table__text">Объём памяти человека</p></li>
+              <li class="table__cell"><h3 class="table__heading">500 триллионов</h3><p class="table__text">Число ответственных за обучение нервных синапсов у взрослого человека</p></li>
+              <li class="table__cell"><h3 class="table__heading">420 миллионов</h3><p class="table__text">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства Всемирный Банк, 2017</p></li>
+              <li class="table__cell"><h3 class="table__heading">17–20 лет</h3><p class="table__text">Пик обучаемости</p></li>
+              <li class="table__cell"><h3 class="table__heading">1885 год</h3><p class="table__text">Открытие кривой забывания</p></li>
+              <li class="table__cell"><h3 class="table__heading">1889 год</h3><p class="table__text">Открытие условного рефлекса</p></li>
+            </ul>
       </section>
 
       <section class="feynman">
+        <a href=#kaufman class="feynman__link visited_link">Подробнее &rarr;</a>
+        <h2 class="feynman__title">Метод Фейнмана</h2>
+        <h3 class="feynman__subtitle">Выучить и не забыть.</h3>
+        <div class="feynman__pic"></div>
       </section>
 
-      <section class="kaufman">
+      <section class="kaufman" id="kaufman">
+        <div class="kaufman__triangle"></div>
+        <h2 class="section-title__theme_dark">Принципы обучения</h2>
+        <h3 class="section-subtitle__theme_dark">от Джоша Кауфмана</h3>
+          <ul class="table_theme_dark">
+            <li class="table__cell_theme_dark"><h4 class="table__heading_theme_dark">1</h4><p class="table__text_theme_dark">Выберите привлекательный проект.</p></li>
+            <li class="table__cell_theme_dark"><h4 class="table__heading_theme_dark">2</h4><p class="table__text_theme_dark">Сосредоточьтесь на каком-то одном навыке.</p></li>
+            <li class="table__cell_theme_dark"><h4 class="table__heading_theme_dark">3</h4><p class="table__text_theme_dark">Определите целевой уровень мастерства.</p></li>
+            <li class="table__cell_theme_dark"><h4 class="table__heading_theme_dark">4</h4><p class="table__text_theme_dark">Разбейте навык на элементы.</p></li>
+            <li class="table__cell_theme_dark"><h4 class="table__heading_theme_dark">5</h4><p class="table__text_theme_dark">Приготовьте всё необходимое для занятий.</p></li>
+            <li class="table__cell_theme_dark"><h4 class="table__heading_theme_dark">6</h4><p class="table__text_theme_dark">Устраните препятствия для занятий.</p></li>
+            <li class="table__cell_theme_dark"><h4 class="table__heading_theme_dark">7</h4><p class="table__text_theme_dark">Выделите специальное время для занятий.</p></li>
+            <li class="table__cell_theme_dark"><h4 class="table__heading_theme_dark">8</h4><p class="table__text_theme_dark">Создайте быстрые петли обратной связи.</p></li>
+            <li class="table__cell_theme_dark"><h4 class="table__heading_theme_dark">9</h4><p class="table__text_theme_dark">Занимайтесь по расписанию, короткими интенсивными интервалами.</p></li>
+            <li class="table__cell_theme_dark"><h4 class="table__heading_theme_dark">10</h4><p class="table__text_theme_dark">Уделяйте внимание количеству и скорости.</p></li>
+          </ul>
       </section>
     </main>
     <footer class="footer">
-
+      <div class="footer__columns">
+        <div class="footer__column_content_copyright">
+          <div class="logo logo_place_footer"></div>
+          <div class="footer__author">&copy; 2022. Амелин Андрей</div>
+        </div>
+      <div class="footer__column_content_info">
+        <h4 class="footer__column-heading">О Практикуме</h4>
+        <div class="footer__column-links">
+          <a href="#" class="footer__column-link">Главная</a>
+          <a href="#" class="footer__column-link">Концепция</a>
+          <a href="#" class="footer__column-link">Наставники</a>
+        </div>
+      </div>
+      <div class="footer__column_content_social">
+        <h4 class="footer__column-heading">Соцсети</h4>
+        <div class="footer__column-links">
+          <a href="#" class="footer__column-link"><img class="footer__social_icon" src="images/facebook_color_white.svg" alt="icon">Facebook</a>
+          <a href="https://vk.com/mel_svk" target="_blank" class="footer__column-link"><img class="footer__social_icon" src="images/vk_color_white.svg" alt="icon">ВКонтакте</a>
+          <a href="http://instagram.com/ndrmln_ml" target="_blank" class="footer__column-link"><img class="footer__social_icon" src="images/instagram_color_white.svg" alt="icon">Instargam</a>
+        </div>
+      </div>
+    </div>
     </footer>
-  </div>
 </body>
 </html>
