--- a/index.html
+++ b/index.html
@@ -85,9 +85,9 @@
       <div class="footer__column_content_social">
         <h4 class="footer__column-heading">Соцсети</h4>
         <div class="footer__column-links">
-          <a href="#" class="footer__column-link"><img class="footer__social_icon" src="images/facebook_color_white.svg" alt="icon">Facebook</a>
-          <a href="https://vk.com/mel_svk" target="_blank" class="footer__column-link"><img class="footer__social_icon" src="images/vk_color_white.svg" alt="icon">ВКонтакте</a>
-          <a href="http://instagram.com/ndrmln_ml" target="_blank" class="footer__column-link"><img class="footer__social_icon" src="images/instagram_color_white.svg" alt="icon">Instargam</a>
+          <a href="#" class="footer__column-link"><img class="footer__social_icon" src="images/facebook_color_white.svg" alt="иконка">Facebook</a>
+          <a href="https://vk.com/mel_svk" target="_blank" class="footer__column-link"><img class="footer__social_icon" src="images/vk_color_white.svg" alt="иконка">ВКонтакте</a>
+          <a href="http://instagram.com/ndrmln_ml" target="_blank" class="footer__column-link"><img class="footer__social_icon" src="images/instagram_color_white.svg" alt="иконка">Instargam</a>
         </div>
       </div>
     </div>
