--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
   <script defer src="scripts/index.js"></script>
   <title>Научиться учиться</title>
 </head>
-<body class="page">
+<body class="page" id="page">
   <div class="form-place" id="form-place">
+    <div class="form-place__substrate"></div>
   <form class="form">
-    <button type="button" class="form__close" id="form-close">X</button>
+    <button type="button" class="form__close">X</button>
     <h2 class="form__title">Комментарий о странице.</h2>
     <div class="form__main">
       <label class="form__label" for="form-firstname">Имя:</label>
@@ -221,7 +222,7 @@
     <div class="footer__columns">
       <div class="footer__column footer__column_content_copyright">
         <div class="logo logo_place_footer"></div>
-        <p class="footer__author">&copy; 2022. Амелин Андрей<button type="button" class="footer__comment-form" id="footer-comment-form">Оставить Комментарий</button></p>
+        <p class="footer__author">&copy; 2022. Амелин Андрей<button type="button" class="footer__comment-form flashing" id="footer__comment-form">Оставить Комментарий</button></p>
       </div>
       <div class="footer__column footer__column_content_info">
         <h3 class="footer__column-heading">О Практикуме</h3>
