--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <div class="form-place" id="form-place">
     <div class="form-place__substrate"></div>
     <form class="form">
-      <button type="button" class="form__close">X</button>мо
+      <button type="button" class="form__close">X</button>
       <h2 class="form__title">Комментарий о странице.</h2>
       <div class="form__main">
         <label class="form__label" for="form-firstname">Имя:</label>
